<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Give Food</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_donate">Donate Now</string>
    <string name="firstName">Your first name</string>
    <string name="lastName">Your last name</string>
    <string name="description">Enter the types and amounts of food (minimum 20 characters required)</string>
    <string name="notes">Any special pickup instructions?</string>
    <string name="availability_label">Available until</string>
    <string name="email">Your email</string>
    <string name="phone">Your contact number</string>
    <string name="street">Your street address</string>
    <string name="city">Your city</string>
    <string name="zip">Your zip</string>
	<string name="cancel">Cancel</string>
	<string name="food_bank_map">Map of Food Banks</string>
	<string name="submit">Request food pickup</string>
	<string name="opt_in">Share your info with local food banks</string>
</resources>
