<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/MainForm" 
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    
<RelativeLayout
    android:id="@+id/donorInfo"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal">
    
<LinearLayout
  android:id="@+id/name"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="horizontal">
<EditText
  android:id="@+id/firstName"
  android:layout_width="fill_parent"
  android:layout_weight="1"
  android:layout_height="wrap_content"
  android:hint="@string/firstName"
  android:inputType="textCapWords"
  android:maxLines="1" 
  android:maxLength="50"
  />

<EditText
  android:id="@+id/lastName"
  android:layout_width="fill_parent"
  android:layout_weight="1"
  android:layout_height="wrap_content"
  android:hint="@string/lastName"
  android:inputType="textCapWords"
  android:maxLines="1" 
  android:maxLength="50"
  />
</LinearLayout>

<EditText
  android:id="@+id/email"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:hint="@string/email"
  android:inputType="textEmailAddress"
  android:maxLines="1" 
  android:maxLength="100" 
  android:layout_below="@id/name"
  />

<EditText
  android:id="@+id/phone"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:hint="@string/phone"
  android:inputType="phone"
  android:maxLines="1"
  android:maxLength="10" 
  android:layout_below="@id/email"
  />

<EditText
  android:id="@+id/streetAddress"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:hint="@string/street"
  android:lines="1"
  android:maxLines="1"
  android:inputType="textPostalAddress"
  android:maxLength="500"
  android:layout_below="@id/phone"
  android:singleLine="true"
  />

<LinearLayout
  android:id="@+id/cityAndZip"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="horizontal"
  android:layout_below="@id/streetAddress">
<EditText
  android:id="@+id/city"
  android:layout_height="wrap_content"
  android:layout_width="fill_parent"
  android:layout_weight="1"
  android:hint="@string/city"
  android:lines="1"
  android:maxLines="1"
  android:inputType="textPostalAddress"
  android:maxLength="50"
  android:singleLine="true"
  />

<EditText
  android:id="@+id/zip"
  android:layout_height="wrap_content"
  android:layout_width="fill_parent"
  android:layout_weight="1"
  android:hint="@string/zip"
  android:lines="1"
  android:maxLines="1"
  android:inputType="number"
  android:maxLength="5"
  android:singleLine="true"
  />
</LinearLayout>

<CheckBox android:id="@+id/optIn"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:text="@string/opt_in"
  android:layout_below="@id/cityAndZip"
  />
</RelativeLayout>

<RelativeLayout
    android:id="@+id/pickupInfo"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal">

<EditText
  android:id="@+id/description"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:hint="@string/description"
  android:minLines="2"
  android:maxLength="500"
  android:scrollbars="none"
  android:inputType="textMultiLine"
  />

<EditText
  android:id="@+id/notes"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:hint="@string/notes"
  android:minLines="2"
  android:maxLength="500"
  android:scrollbars="none"
  android:inputType="textMultiLine"
  android:layout_below="@id/description"
  />

<ProgressBar android:id="@+id/progress"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  style="@android:style/Widget.ProgressBar.Large"
  android:layout_centerHorizontal="true"
  android:layout_centerVertical="true"/>
 
<Button android:id="@+id/foodBankMapButton"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:text="@string/food_bank_map" 
  android:drawableTop="@drawable/ic_launcher"
  android:layout_below="@id/notes"
  android:layout_alignParentLeft="true"
  android:layout_marginLeft="5dp"
/>

<Button android:id="@+id/submit"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:text="@string/submit"
  android:drawableTop="@drawable/ic_launcher"
  android:layout_below="@id/notes"
  android:layout_alignParentRight="true"
  android:layout_marginRight="5dp"
/>
</RelativeLayout>

</LinearLayout>
</ScrollView>